--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "mysql2": "^3.6.1",
-    "pug": "^2.0.3",
-    "razorpay": "^2.8.4",
-    "sequelize": "^6.6.2"
+    "razorpay": "^2.8.4"
   }
 }
